infrastructure/base/apps/traefik/oauth-middleware.yaml
# https://github.com/oauth2-proxy/oauth2-proxy/issues/1639#issuecomment-1686259034 (makes it possible to use per service auth)
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth-forwardauth
spec:
  forwardAuth:
    address: "http://oauth2-proxy.oauth2-proxy"
    trustForwardHeader: true
