infrastructure/base/apps/traefik/oauth-traefik-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth-forwardauth-service
spec:
  forwardAuth:
    address: "http://oauth2-proxy.oauth2-proxy/oauth2/auth?allowed_group=traefik-dashboard"
    trustForwardHeader: true
