infrastructure/base/apps/traefik/networkPolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-from-traefik-to-apiserver
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: traefik
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-prometheus-to-traefik
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: traefik
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.cilium.k8s.policy.serviceaccount: kube-prometheus-stack-prometheus
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9100"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-world-to-traefik
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: traefik
  ingress:
    - fromEntities:
      - world
      # 8443 ("new" https endpoint) call is from gitlab-runner & source-controller (flux)
      - cluster
      toPorts:
        - ports:
            - port: "8000"
            - port: "8443"
---
# allow connection to all cluster services, but cnp also needed for ingress traffic on service
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-from-traefik-to-cluster
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: traefik
  egress:
    - toEntities:
        - cluster
---
# allow egress to oauth2-proxy
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-from-traefik-to-oauth-proxy
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: traefik
  egress:
    - toFQDNs:
        - matchName: auth.${DOMAIN}
